--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wiesson/shared-ui",
   "version": "0.3.0",
-  "main": "./src/index.ts",
+  "main": "./ui/index.js",
   "dependencies": {
     "@storybook/react": "^4.1.11",
     "@types/jest": "23.3.13",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "start-storybook -p 9009 -s public",
-    "build": "react-scripts build",
+    "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
