--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.6.0",
   "main": "./ui/index.js",
   "dependencies": {
-    "@storybook/react": "^4.1.11",
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.22",
-    "@types/react-dom": "16.0.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "typescript": "3.2.4"
+  },
+  "devDependencies": {
+    "@storybook/react": "^4.1.11",
+    "@types/jest": "23.3.13",
+    "@types/node": "10.12.18",
+    "@types/react": "16.7.22",
+    "@types/react-dom": "16.0.11"
   },
   "scripts": {
     "start": "start-storybook -p 9009 -s public",
@@ -29,7 +31,6 @@
     "not op_mini all"
   ],
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
