Browserlist config to skip IE

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
+    "not ie >= 0",
     "not op_mini all"
   ],
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
